--- a/package.json
+++ b/package.json
@@ -6,18 +6,27 @@
   "license": "MIT",
   "scripts": {
     "start": "webpack-dev-server --config ./webpack.config.js --mode development",
-    "build": "webpack --config ./webpack.config.js -p"
+    "build": "webpack --config ./webpack.config.js -p",
+    "add-locale": "lingui add-locale",
+    "extract": "lingui extract",
+    "compile": "lingui compile"
   },
   "devDependencies": {
     "@babel/core": "^7.7.5",
     "@babel/preset-env": "^7.7.6",
     "@babel/preset-react": "^7.7.4",
+    "@lingui/cli": "^2.9.0",
+    "@lingui/macro": "^2.9.0",
+    "babel-core": "^7.0.0-bridge.0",
     "babel-loader": "^8.0.6",
+    "babel-plugin-macros": "^2.8.0",
+    "typescript": "^3.7.3",
     "webpack": "^4.41.2",
-    "webpack-dev-server": "^3.9.0",
-    "webpack-cli": "^3.3.10"
+    "webpack-cli": "^3.3.10",
+    "webpack-dev-server": "^3.9.0"
   },
   "dependencies": {
+    "@lingui/react": "^2.9.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
   }
