--- a/.linguirc
+++ b/.linguirc
@@ -2,5 +2,6 @@
    "localeDir": "src/locales/",
    "srcPathDirs": ["src/"],
    "sourceLocale": "en",
+   "fallbackLocale": "en",
    "format": "po"
 }
