--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "license": "MIT",
   "scripts": {
     "start": "webpack-dev-server --config ./webpack.config.js --mode development",
-    "build": "webpack --config ./webpack.config.js -p",
+    "build": "yarn compile && webpack --config ./webpack.config.js -p",
+    "build:serve": "yarn build && serve dist",
     "add-locale": "lingui add-locale",
     "extract": "lingui extract",
     "compile": "lingui compile"
@@ -16,10 +17,12 @@
     "@babel/preset-env": "^7.7.6",
     "@babel/preset-react": "^7.7.4",
     "@lingui/cli": "^2.9.0",
+    "@lingui/loader": "^2.9.0",
     "@lingui/macro": "^2.9.0",
     "babel-core": "^7.0.0-bridge.0",
     "babel-loader": "^8.0.6",
     "babel-plugin-macros": "^2.8.0",
+    "serve": "^11.2.0",
     "typescript": "^3.7.3",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.10",
