--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "@lingui/macro": "^2.9.0",
     "babel-core": "^7.0.0-bridge.0",
     "babel-loader": "^8.0.6",
+    "babel-plugin-dynamic-import-node": "^2.3.0",
     "babel-plugin-macros": "^2.8.0",
+    "babel-plugin-syntax-dynamic-import": "^6.18.0",
+    "babel-plugin-transform-class-properties": "^6.24.1",
     "serve": "^11.2.0",
     "typescript": "^3.7.3",
     "webpack": "^4.41.2",
