--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,7 +24,7 @@ jobs:
           project-id: 226204445dcaa59581a7b0.23094960
 
           # The relative directory where language files will be found
-          directory: src/locales/%LANG_ISO%
+          directory: src/locales/
 
           # Which format to parse (json or properties)
           format: po
@@ -33,4 +33,4 @@ jobs:
           platform: web # or android, ios, other
 
           # The filename new keys should be attached to
-          filename: messages.po
+          filename: %LANG_ISO%/messages.po
