--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
     "webpack-dev-server": "^3.9.0"
   },
   "dependencies": {
+    "@actions/core": "^1.2.0",
     "@lingui/react": "^2.9.0",
+    "@lokalise/node-api": "^2.0.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
   }
