--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -55,4 +55,4 @@ jobs:
       - name: Extracting messages
         run: yarn extract
       - name: Extracting messages
-        run: git status --porcelain | grep . && exit 1 || exit 0
+        run: git status --porcelain | grep . && git add . && git commit -m "Locales update" && exit 0 || exit 0
