--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,6 +5,9 @@ on:
     # Only run workflow for pushes to specific branches
     branches:
       - master
+    # Only run workflow when matching files are changed
+    # paths:
+    # - "src/locales/*/messages.po"
 
 jobs:
   upload:
@@ -51,7 +54,5 @@ jobs:
           NODE_AUTH_TOKEN: ${{ secrets.GITHUB_REGISTRY_TOKEN }}
       - name: Extracting messages
         run: yarn extract
-      - name: Add files
-        run: git add .
-      - name: Creating commit
-        run: git commit -m "Locales update"
+      - name: Commiting locales
+        run: git status --porcelain | grep . && git add . && git commit -m "Locales update" && exit 0 || exit 0
