--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,7 +33,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v1
+        uses: actions/checkout@v2
         with:
           fetch-depth: 1
       - name: Cache node modules
@@ -55,4 +55,4 @@ jobs:
       - name: Extracting messages
         run: yarn extract
       - name: Commiting locales
-        run: git status --porcelain | grep . && git config --global user.email "developer@pleo.io" && git config --global user.name "Lingui police" && git add . && git commit -m "Locales update" && exit 0 || exit 0
+        run: git status --porcelain | grep . && git config --global user.email "developer@pleo.io" && git config --global user.name "Lingui police" && git add . && git commit -m "Locales update" && git push && exit 0 || exit 0
