--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -56,10 +56,10 @@ jobs:
         run: yarn extract
       - name: Commiting locales
         run: |
-          git status --porcelain | grep .
+          (git status --porcelain | grep .
           git config --global user.email "developer@pleo.io"
           git config --global user.name "Lingui police"
           git add .
           git commit -m "Locales update"
-          git push 
+          git push)
           || exit 0
