--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -55,9 +55,9 @@ jobs:
       - name: Extracting messages
         run: yarn extract
       - name: Check for updates
-        run: git status --porcelain | grep . && ::set-env myNull="success" || ::set-env myNull="failure"
+        run: git status --porcelain | grep . && ::set-env name=NEW_LOCALES::true || name=NEW_LOCALES::false
       - name: Commiting locales
-        if: myNull == "success"
+        if: NEW_LOCALES == true
         run: |
           git config --global user.email "developer@pleo.io"
           git config --global user.name "Lingui police"
