--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,7 @@
 name: Push keys to Lokalise
 
 on:
-  push:
+  [push, status]:
     # Only run workflow for pushes to specific branches
     # branches:
     #   - master
