--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -59,8 +59,8 @@ jobs:
       - name: Commiting messages
         if: failure()
         run: |
-          git config --global user.email "developer@pleo.io"
-          git config --global user.name "Lingui police"
+          git config --global user.email "igor.techweb@gmail.com
+          git config --global user.name "Igor Dolzhenkov"
           git add .
           git commit -m "Locales update"
           git push
