--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,45 +26,10 @@ jobs:
   #       # The relative directory where language files will be found
   #       file-path: src/locales/%LANG_ISO%/messages.po
 
-  # lint:
-  #   name: LinguiJs test
-  #   env:
-  #     CI: "true"
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - name: Checkout
-  #       uses: actions/checkout@v2
-  #       with:
-  #         fetch-depth: 1
-  #     - name: Cache node modules
-  #       id: node_modules_cache
-  #       uses: actions/cache@v1
-  #       with:
-  #         path: node_modules
-  #         key: ${{ runner.os }}-${{ hashFiles('yarn.lock') }}-node_modules_cache
-  #     - name: Setup node
-  #       uses: actions/setup-node@v1
-  #       with:
-  #         node-version: "10.x"
-  #         registry-url: "https://npm.pkg.github.com"
-  #     - name: Install dependencies
-  #       if: steps.node_modules_cache.outputs.cache-hit != 'true'
-  #       run: yarn --frozen-lockfile --ignore-engines --ignore-optional --non-interactive --silent --ignore-scripts --production=false
-  #       env:
-  #         NODE_AUTH_TOKEN: ${{ secrets.GITHUB_REGISTRY_TOKEN }}
-  #     - name: Extracting messages
-  #       run: yarn extract
-  #     - name: Checking for new messages
-  #       run: git status --porcelain | grep . && exit 1 || exit 0
-  #     - name: Commiting messages
-  #       if: failure()
-  #       run: |
-  #         git config --global user.email "igor.techweb@gmail.com
-  #         git config --global user.name "Igor Dolzhenkov"
-  #         git add .
-  #         git commit -m "Locales update"
-  #         git push
-  build:
+  lint:
+    name: LinguiJs test
+    env:
+      CI: "true"
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -94,12 +59,50 @@ jobs:
       - name: Commiting messages
         if: failure()
         run: |
-          git config --global user.email "igor.techweb@gmail.com"
+          git config --global user.email "igor.techweb@gmail.com
           git config --global user.name "Igor Dolzhenkov"
           git add .
           git commit -m "Locales update"
-          git push
       - name: Push changes
         uses: ad-m/github-push-action@master
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
+  # build:
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - name: Checkout
+  #       uses: actions/checkout@v2
+  #       with:
+  #         fetch-depth: 1
+  #     - name: Cache node modules
+  #       id: node_modules_cache
+  #       uses: actions/cache@v1
+  #       with:
+  #         path: node_modules
+  #         key: ${{ runner.os }}-${{ hashFiles('yarn.lock') }}-node_modules_cache
+  #     - name: Setup node
+  #       uses: actions/setup-node@v1
+  #       with:
+  #         node-version: "10.x"
+  #         registry-url: "https://npm.pkg.github.com"
+  #     - name: Install dependencies
+  #       if: steps.node_modules_cache.outputs.cache-hit != 'true'
+  #       run: yarn --frozen-lockfile --ignore-engines --ignore-optional --non-interactive --silent --ignore-scripts --production=false
+  #       env:
+  #         NODE_AUTH_TOKEN: ${{ secrets.GITHUB_REGISTRY_TOKEN }}
+  #     - name: Extracting messages
+  #       run: yarn extract
+  #     - name: Checking for new messages
+  #       run: git status --porcelain | grep . && exit 1 || exit 0
+  #     - name: Commiting messages
+  #       if: failure()
+  #       run: |
+  #         git config --global user.email "igor.techweb@gmail.com"
+  #         git config --global user.name "Igor Dolzhenkov"
+  #         git add .
+  #         git commit -m "Locales update"
+  #         git push
+  #     - name: Push changes
+  #       uses: ad-m/github-push-action@master
+  #       with:
+  #         github_token: ${{ secrets.GITHUB_TOKEN }}
