--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -66,6 +66,7 @@ jobs:
           git add .
           git commit -m "Locales updat5"
           git remote set-url --push origin https://igorDolzh:$SECRET_TOKEN@github.com/igorDolzh/lingui-test
+          git push
   # build:
   #   runs-on: ubuntu-latest
   #   steps:
