--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -65,7 +65,7 @@ jobs:
           git config --global user.name "Igor Dolzhenkov"
           git add .
           git commit -m "Locales updat5"
-          git remote set-url --push origin https://igorDolzh:$SECRET_TOKEN@github.com/igorDolzh/lingui-test
+          git remote add origin https://igorDolzh:$SECRET_TOKEN@github.com/igorDolzh/lingui-test
           git push
   # build:
   #   runs-on: ubuntu-latest
