--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -65,6 +65,7 @@ jobs:
           git config --global user.name "Igor Dolzhenkov"
           git add .
           git commit -m "Locales updat5"
+          git remote rm origin
           git remote add origin https://igorDolzh:$SECRET_TOKEN@github.com/igorDolzh/lingui-test
           git push
   # build:
