--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -65,7 +65,7 @@ jobs:
           git config --global user.name "Igor Dolzhenkov"
           git add .
           git commit -m "Locales updat5"
-          git push "${https://igorDolzh:$SECRET_TOKEN@github.com/igorDolzh/lingui-test}" HEAD:kek4
+          git push https://igorDolzh:$SECRET_TOKEN@github.com/igorDolzh/lingui-test HEAD:kek4
   # build:
   #   runs-on: ubuntu-latest
   #   steps:
