--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -66,7 +66,7 @@ jobs:
           git add .
           git commit -m "Locales updat6"
           echo "${{secrets.GITHUB_TOKEN}}"
-          git push https://${{secrets.GITHUB_TOKEN}}@github.com/${{github.repository}} HEAD:"${GITHUB_REF:11}"
+          git push https://${{ github.actor }}:${{secrets.GITHUB_TOKEN}}@github.com/${{github.repository}} HEAD:"${GITHUB_REF:11}"
   # build:
   #   runs-on: ubuntu-latest
   #   steps:
