--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,24 +36,13 @@ jobs:
         uses: actions/checkout@v1
         with:
           fetch-depth: 1
-      - name: Cache node modules
-        id: node_modules_cache
-        uses: actions/cache@v1
-        with:
-          path: node_modules
-          key: ${{ runner.os }}-${{ hashFiles('yarn.lock') }}-node_modules_cache
       - name: Setup node
         uses: actions/setup-node@v1
         with:
           node-version: "10.x"
           registry-url: "https://npm.pkg.github.com"
-      - name: Install dependencies
-        if: steps.node_modules_cache.outputs.cache-hit != 'true'
-        run: yarn --frozen-lockfile --ignore-engines --ignore-optional --non-interactive --silent --ignore-scripts --production=false
-        env:
-          NODE_AUTH_TOKEN: ${{ secrets.GITHUB_REGISTRY_TOKEN }}
       - name: Extracting messages
-        run: yarn extract
+        run: npx @lingui/cli extract
       - name: Checking for new messages
         run: git status --porcelain | grep . && exit 1 || exit 0
       - name: Commiting messages
