--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,7 +42,7 @@ jobs:
           node-version: "10.x"
           registry-url: "https://npm.pkg.github.com"
       - name: Extracting messages
-        run: npm i -g @lingui/cli && npx lingui extract
+        run: yarn add babel-core @lingui/cli && yarn extract
       - name: Checking for new messages
         run: git status --porcelain | grep . && exit 1 || exit 0
       - name: Commiting messages
