--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,13 +36,19 @@ jobs:
         uses: actions/checkout@v1
         with:
           fetch-depth: 1
+      - name: Cache node modules
+          id: lingui_modules_cache
+          uses: actions/cache@v1
+          with:
+            path: node_modules
+            key: ${{ runner.os }}-lingui_modules_cache
       - name: Setup node
         uses: actions/setup-node@v1
         with:
           node-version: "10.x"
           registry-url: "https://npm.pkg.github.com"
       - name: Install dependencies
-        if: steps.node_modules_cache.outputs.cache-hit != 'true'
+        if: steps.lingui_modules_cache.outputs.cache-hit != 'true'
         run: yarn add babel-core@^7.0.0-bridge.0 @babel/core @lingui/cli
       - name: Extracting messages
         run: yarn extract
