--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,7 +43,7 @@ jobs:
           registry-url: "https://npm.pkg.github.com"
       - name: Install dependencies
         if: steps.lingui_modules_cache.outputs.cache-hit != 'true'
-        run: yarn add global babel-core@^7.0.0-bridge.0 @babel/core
+        run: yarn add babel-core@^7.0.0-bridge.0 @babel/core --frozen-lockfile
       - name: Extracting messages
         run: npx lingui extract
       - name: Checking for new messages
