--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -58,6 +58,18 @@ jobs:
       #     git add .
       #     git commit -m "Locales updat6"
       #     git push https://igorDolzh:$SECRET_TOKEN@github.com/${{ github.repository }} HEAD:"${GITHUB_REF:11}"
+      - uses: actions/github-script@0.3.0
+        id: start-check
+        with:
+          github-token: ${{secrets.GITHUB_TOKEN}}
+          previews: "antiope-preview"
+          script: |
+            const result = await github.checks.listForRef({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              ref: context.sha
+            })
+            return result.data.check_runs.find(run => run.name === 'Type coverage').id
       - name: Commiting messages
         uses: actions/github-script@0.3.0
         with:
@@ -66,7 +78,7 @@ jobs:
             await github.checks.update({
               owner: context.repo.owner,
               repo: context.repo.repo,
-              check_run_id: 'hello',
+              check_run_id: '${{steps.start-check.outputs.result}}',
               conclusion: 'success',
               output: {
                 title: '${{steps.type-coverage.outputs.coverage}}',
