--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -69,7 +69,7 @@ jobs:
               repo: context.repo.repo,
               ref: context.sha
             })
-            return result.data.check_runs.find(run => run.name === 'Type coverage').id
+            return result.data.check_runs.find(run => run.name).id
       - name: Commiting messages
         uses: actions/github-script@0.3.0
         with:
