--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,10 +44,10 @@ jobs:
       - name: Install dependencies
         if: steps.lingui_modules_cache.outputs.cache-hit != 'true'
         run: yarn add babel-core@^7.0.0-bridge.0 @babel/core --frozen-lockfile
-      # - name: Extracting messages
-      #   run: npx lingui extract
-      # - name: Checking for new messages
-      #   run: git status --porcelain | grep . && exit 1 || exit 0
+      - name: Extracting messages
+        run: npx lingui extract
+      - name: Checking for new messages
+        run: git status --porcelain | grep . && exit 1 || exit 0
       # - name: Commiting messages
       #   env:
       #     SECRET_TOKEN: ${{ secrets.SECRET_TOKEN }}
@@ -58,6 +58,22 @@ jobs:
       #     git add .
       #     git commit -m "Locales updat6"
       #     git push https://igorDolzh:$SECRET_TOKEN@github.com/${{ github.repository }} HEAD:"${GITHUB_REF:11}"
+
+  commit:
+    name: Commit
+    env:
+      CI: "true"
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v1
+        with:
+          fetch-depth: 1
+      - name: Setup node
+        uses: actions/setup-node@v1
+        with:
+          node-version: "10.x"
+          registry-url: "https://npm.pkg.github.com"
       - uses: actions/github-script@0.3.0
         id: start-check
         with:
@@ -69,8 +85,8 @@ jobs:
               repo: context.repo.repo,
               ref: context.sha
             })
-            return result.data.check_runs.find(run => run.name).id
-      - name: Commiting messages
+            return result.data.check_runs.find(run => run.name === 'LinguiJs test').id
+      - name: Show button
         uses: actions/github-script@0.3.0
         with:
           github-token: ${{secrets.GITHUB_TOKEN}}
