--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -97,13 +97,13 @@ jobs:
         with:
           node-version: "10.x"
           registry-url: "https://npm.pkg.github.com"
-      - name: Install dependencies
-        if: steps.lingui_modules_cache.outputs.cache-hit != 'true'
-        run: yarn add babel-core@^7.0.0-bridge.0 @babel/core --frozen-lockfile
-      - name: Extracting messages
-        run: npx lingui extract
-      - name: Checking for new messages
-        run: git status --porcelain | grep . && exit 1 || exit 0
+      # - name: Install dependencies
+      #   if: steps.lingui_modules_cache.outputs.cache-hit != 'true'
+      #   run: yarn add babel-core@^7.0.0-bridge.0 @babel/core --frozen-lockfile
+      # - name: Extracting messages
+      #   run: npx lingui extract
+      # - name: Checking for new messages
+      #   run: git status --porcelain | grep . && exit 1 || exit 0
       # - name: Commiting messages
       #   env:
       #     SECRET_TOKEN: ${{ secrets.SECRET_TOKEN }}
@@ -115,7 +115,7 @@ jobs:
       #     git commit -m "Locales updat6"
       #     git push https://igorDolzh:$SECRET_TOKEN@github.com/${{ github.repository }} HEAD:"${GITHUB_REF:11}"
       - uses: actions/github-script@0.3.0
-        if: failure()
+        # if: failure()
         id: start-check
         with:
           github-token: ${{secrets.GITHUB_TOKEN}}
@@ -127,7 +127,7 @@ jobs:
             })
             return result.data.check_runs.find(run => run.name === 'L').id
       - name: Commiting messages
-        if: failure()
+        # if: failure()
         uses: actions/github-script@0.3.0
         with:
           github-token: ${{secrets.GITHUB_TOKEN}}
